crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__preview_context_managers_autodetect_311.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/preview_context_managers_autodetect_311.py
---
## Input

```python
# flags: --preview --minimum-version=3.11
# This file uses except* clause in Python 3.11.


try:
    some_call()
except* Error as e:
    pass


with \
     make_context_manager1() as cm1, \
     make_context_manager2() as cm2, \
     make_context_manager3() as cm3, \
     make_context_manager4() as cm4 \
:
    pass
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,3 +1,4 @@
+# flags: --preview --minimum-version=3.11
 # This file uses except* clause in Python 3.11.
 
 
@@ -7,10 +8,5 @@
     pass
 
 
-with (
-    make_context_manager1() as cm1,
-    make_context_manager2() as cm2,
-    make_context_manager3() as cm3,
-    make_context_manager4() as cm4,
-):
+with make_context_manager1() as cm1, make_context_manager2() as cm2, make_context_manager3() as cm3, make_context_manager4() as cm4:
     pass
```

## Ruff Output

```python
# flags: --preview --minimum-version=3.11
# This file uses except* clause in Python 3.11.


try:
    some_call()
except* Error as e:
    pass


with make_context_manager1() as cm1, make_context_manager2() as cm2, make_context_manager3() as cm3, make_context_manager4() as cm4:
    pass
```

## Black Output

```python
# This file uses except* clause in Python 3.11.


try:
    some_call()
except* Error as e:
    pass


with (
    make_context_manager1() as cm1,
    make_context_manager2() as cm2,
    make_context_manager3() as cm3,
    make_context_manager4() as cm4,
):
    pass
```


