crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__preview_docstring_no_string_normalization.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/preview_docstring_no_string_normalization.py
---
## Input

```python
# flags: --preview --skip-string-normalization
def do_not_touch_this_prefix():
    R"""There was a bug where docstring prefixes would be normalized even with -S."""


def do_not_touch_this_prefix2():
    FR'There was a bug where docstring prefixes would be normalized even with -S.'


def do_not_touch_this_prefix3():
    u'''There was a bug where docstring prefixes would be normalized even with -S.'''
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -4,8 +4,8 @@
 
 
 def do_not_touch_this_prefix2():
-    FR'There was a bug where docstring prefixes would be normalized even with -S.'
+    Rf"There was a bug where docstring prefixes would be normalized even with -S."
 
 
 def do_not_touch_this_prefix3():
-    u'''There was a bug where docstring prefixes would be normalized even with -S.'''
+    """There was a bug where docstring prefixes would be normalized even with -S."""
```

## Ruff Output

```python
# flags: --preview --skip-string-normalization
def do_not_touch_this_prefix():
    R"""There was a bug where docstring prefixes would be normalized even with -S."""


def do_not_touch_this_prefix2():
    Rf"There was a bug where docstring prefixes would be normalized even with -S."


def do_not_touch_this_prefix3():
    """There was a bug where docstring prefixes would be normalized even with -S."""
```

## Black Output

```python
# flags: --preview --skip-string-normalization
def do_not_touch_this_prefix():
    R"""There was a bug where docstring prefixes would be normalized even with -S."""


def do_not_touch_this_prefix2():
    FR'There was a bug where docstring prefixes would be normalized even with -S.'


def do_not_touch_this_prefix3():
    u'''There was a bug where docstring prefixes would be normalized even with -S.'''
```


